--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +10,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="id.sch.smktelkom_mlg.project.xirpl104132231.tensesdetector.MainActivity">
+    tools:context="id.sch.smktelkom_mlg.project.xirpl104132231.tensesdetector.MainActivity"
+    android:weightSum="1">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -37,5 +39,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Hasil" />
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="10px"
+        android:layout_marginTop="300dp"
+        app:srcCompat="@drawable/corp_logo"
+        android:id="@+id/imageView2" />
 
 </LinearLayout>
